refactor: Reestruturação completa para arquitetura MVC
ARQUITETURA MVC IMPLEMENTADA:
================================

 models/ - Lógica de ML e processamento
   analise_rapida.py (core do sistema)

 views/ - Interface do usuário
   dashboard_final.html (dashboard interativo)

 controllers/ - Orquestração e controle
   executar_analise.py (menu de execução)

 data/ - Dados de entrada e saída
   VBP*.xls (dados brutos 2012-2024)
   resultados_ml.json (resultados ML)
   comparacao_modelos.csv (comparação)

 outputs/ - Visualizações geradas
   comparacao_metricas.png
   confusion_matrix_melhor.png
   feature_importance.png
   evolucao_temporal.png

 notebooks/ - Jupyter notebooks das aulas
   Aula/ (11 notebooks de ML)

 docs/ - Documentação completa
   ARQUITETURA_MVC.md (este documento)
   README_ML.md (documentação técnica)
   GUIA_RAPIDO.md (quick start)

 obsoletos/ - Código legado isolado
   Arquivos antigos não utilizados

MELHORIAS:
==========
 Separação clara de responsabilidades (MVC)
 Caminhos relativos consistentes (funciona do root)
 Código legado isolado em obsoletos/
 Documentação centralizada em docs/
 Script principal main.py como entry point
 Estrutura escalável e manutenível
 Fácil navegação e compreensão
 .gitignore atualizado para nova estrutura

EXECUÇÃO:
=========
python main.py          # Menu interativo
python models/analise_rapida.py  # Análise direta
start views/dashboard_final.html # Dashboard

RESULTADOS MANTIDOS:
====================
 7 modelos ML comparados
 Decision Tree 98.58% (melhor)
 13 anos de dados (124K registros)
 Dashboard com 4 abas funcionais

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
 # Arquivos de dados grandes
 *.xlsx
 *.xls
+data/*.xlsx
+data/*.xls
+
+# Resultados e outputs (podem ser regenerados)
+outputs/*.png
+data/resultados_ml.json
+data/comparacao_modelos.csv
+
+# HTMLs antigos (obsoletos mantidos apenas localmente)
+obsoletos/
 
 # Vídeos e arquivos multimídia
 *.mp4
